feat(integration-tests): adjust maven integration tests